# gex-explained

./: .gitignore  LICENSE  README.md  pyproject.toml
code/: call_wall_put_wall_finder.py  compare_with_api.py  compute_gex.py  dealer_hedging_flow_analysis.py  delta_vanna_charm_exposure.py  exposure_narrative_analysis.py  gamma_exposure_by_strike.py  gamma_flip_level_tracker.py  gex_trading_spy_tsla_qqq.py  plot_gex.py
data/: sample_chain.csv
tests/: test_compute_gex.py  test_integration.py  test_unit.py
theory/: dealer-hedging.md  gamma-exposure.md  gex-regimes.md
