[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gex-explained"
version = "0.1.0"
description = "Educational implementation of Gamma Exposure (GEX) from scratch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as requiring a live API key (deselect with -m 'not integration')",
]

[tool.hatch.build.targets.wheel]
packages = ["code"]
